--- a/simple_interest_(1).ipynb
+++ b/simple_interest_(1).ipynb
@@ -67,7 +67,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": null,
       "id": "f9a6e70b-c83a-4513-90d7-3cbcfbf9cde7",
       "metadata": {
         "id": "f9a6e70b-c83a-4513-90d7-3cbcfbf9cde7",
@@ -117,13 +117,44 @@
     },
     {
       "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "DAM8sR3ZwbiK"
+      },
+      "id": "DAM8sR3ZwbiK",
       "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 7,
       "id": "4299ad3d-5672-42fa-bf17-fbf7360e66c5",
       "metadata": {
-        "id": "4299ad3d-5672-42fa-bf17-fbf7360e66c5"
+        "id": "4299ad3d-5672-42fa-bf17-fbf7360e66c5",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "09a45c3b-b89f-4be9-c058-495848a8215b"
       },
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "please enter amount2000\n",
+            "please enter interest rate0.5\n",
+            "please enter float4\n",
+            "the total interest on the loan is 40.0\n"
+          ]
+        }
+      ],
+      "source": [
+        "amount_borrowed = int (input(\"please enter amount\"))\n",
+        "interest_rate = float (input(\"please enter interest rate\"))\n",
+        "loan_period = float (input(\"please enter float\"))\n",
+        "interest = (amount_borrowed*interest_rate*loan_period)/100\n",
+        "print(\"the total interest on the loan is\", interest)"
+      ]
     }
   ],
   "metadata": {
