--- a/a_taste_of_python_(1).ipynb
+++ b/a_taste_of_python_(1).ipynb
@@ -38,12 +38,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "id": "a3506a0d-e007-45b1-920f-d499033baf9f",
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "id": "a3506a0d-e007-45b1-920f-d499033baf9f",
         "outputId": "fe23be18-6e10-45d1-a507-b0f3b1a05ef5"
@@ -75,14 +74,76 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "After doing testing both variable i can see that it is not important however the capital A is associated to a shortcut."
+      ],
+      "metadata": {
+        "id": "XCpkLMT-x8pn"
+      },
+      "id": "XCpkLMT-x8pn"
+    },
+    {
       "cell_type": "code",
-      "execution_count": null,
+      "source": [
+        "'a'"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "id": "zYOpFvnuxwzv",
+        "outputId": "65e1a679-c9eb-4eb2-8429-b73c2e8b5b9b"
+      },
+      "id": "zYOpFvnuxwzv",
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'a'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 3
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 4,
       "id": "cbd8c919-9732-4f5d-9b82-9209aff137f6",
       "metadata": {
-        "id": "cbd8c919-9732-4f5d-9b82-9209aff137f6"
+        "id": "cbd8c919-9732-4f5d-9b82-9209aff137f6",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "outputId": "6b3bfe7c-8540-4e6c-863a-248daddd4f20"
       },
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'A'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 4
+        }
+      ],
+      "source": [
+        "'A'"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -136,7 +197,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "id": "a04eb2f0-4f59-47ea-9556-3cba1c88ac1c",
       "metadata": {
         "colab": {
@@ -215,12 +276,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": null,
       "id": "1a4fdd7b-c2b2-4be3-be60-98fcb3da27d9",
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "id": "1a4fdd7b-c2b2-4be3-be60-98fcb3da27d9",
         "outputId": "018dc5e0-de1d-482a-dc3c-42251e1fe9cc"
@@ -255,12 +315,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": null,
       "id": "41ca8219-83d6-4aca-92bf-3835fdaa19fb",
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "id": "41ca8219-83d6-4aca-92bf-3835fdaa19fb",
         "outputId": "dc9bafcb-82e4-4ea7-bf27-975fbf75775d"
@@ -299,14 +358,13 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "id": "6ei7E5n9j7Qe",
         "outputId": "46143283-4c18-4017-89cb-6080899395ac"
       },
       "id": "6ei7E5n9j7Qe",
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -342,12 +400,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": null,
       "id": "0256c9c6-fe19-43e6-8945-bff88804d457",
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "id": "0256c9c6-fe19-43e6-8945-bff88804d457",
         "outputId": "3fac79d8-6622-4978-9480-88fc816d0c66"
@@ -415,7 +472,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": null,
       "id": "a92584fc-fa5c-4941-b747-b042849cb114",
       "metadata": {
         "colab": {
@@ -468,12 +525,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": null,
       "id": "5636b5db-1114-40bb-a88f-47874c11890e",
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "id": "5636b5db-1114-40bb-a88f-47874c11890e",
         "outputId": "6dcd92b7-b79c-43b5-f0fd-8d6a9142fb81"
@@ -505,12 +561,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": null,
       "id": "f600bbf8-e6d3-44f3-8301-86952bf50156",
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "id": "f600bbf8-e6d3-44f3-8301-86952bf50156",
         "outputId": "0026064f-21a9-4f3c-ef86-dcc2905f1e7c"
@@ -542,12 +597,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": null,
       "id": "d09bdd9a-f5f0-426e-baf6-3d20472f19a5",
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "id": "d09bdd9a-f5f0-426e-baf6-3d20472f19a5",
         "outputId": "79b14075-050c-4ea0-9b43-901fe9c85306"
@@ -625,12 +679,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 20,
+      "execution_count": null,
       "id": "4f02a3c4-92df-4b56-9699-8627467a6e14",
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "id": "4f02a3c4-92df-4b56-9699-8627467a6e14",
         "outputId": "f78c88a1-e60c-497b-e871-1a66d0df9cd5"
@@ -665,12 +718,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 21,
+      "execution_count": null,
       "id": "b9db7b35-3936-48a4-b3ae-957fc9ac6468",
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "id": "b9db7b35-3936-48a4-b3ae-957fc9ac6468",
         "outputId": "ee9df966-6816-4a22-9dd6-af753b2a6e17"
@@ -701,12 +753,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 22,
+      "execution_count": null,
       "id": "9bb15522-6a92-40a1-b83e-571081a9b66d",
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "id": "9bb15522-6a92-40a1-b83e-571081a9b66d",
         "outputId": "bfa75b46-d5c2-4376-bf0c-8d6043d32999"
@@ -736,12 +787,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 25,
+      "execution_count": null,
       "id": "1b877516-548e-4f00-88c2-d9ce1651d2c0",
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "id": "1b877516-548e-4f00-88c2-d9ce1651d2c0",
         "outputId": "d9ffd0c8-e9d5-4a5e-ecd8-6db33d338ab7"
@@ -776,12 +826,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 39,
+      "execution_count": null,
       "id": "3c090a42-004e-4922-bd72-ed59ff88cb53",
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "id": "3c090a42-004e-4922-bd72-ed59ff88cb53",
         "outputId": "e0b6165d-cac0-4c54-e228-d6c1fc26944a"
@@ -816,12 +865,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 38,
+      "execution_count": null,
       "id": "43dc5d55-891a-4667-888c-63a681ba0a26",
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "id": "43dc5d55-891a-4667-888c-63a681ba0a26",
         "outputId": "b504256d-5d94-42fb-94c7-cc2a99af5e68"
@@ -906,7 +954,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 43,
+      "execution_count": null,
       "id": "b51f5001-2df5-42d1-99e8-850a4994048a",
       "metadata": {
         "colab": {
@@ -947,13 +995,34 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 9,
       "id": "137a88a9-e2eb-4ace-b1cc-b7fdf260941e",
       "metadata": {
-        "id": "137a88a9-e2eb-4ace-b1cc-b7fdf260941e"
+        "id": "137a88a9-e2eb-4ace-b1cc-b7fdf260941e",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "83cad2a9-f159-4f04-9ff4-dcb61c0fb3f4"
       },
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "please enter first number3\n",
+            "please enter second number2\n",
+            "3\n"
+          ]
+        }
+      ],
+      "source": [
+        "num1= int(input(\"please enter first number\"))\n",
+        "num2= int(input(\"please enter second number\"))\n",
+        "if num1>num2 :\n",
+        "    print (num1)\n",
+        "else:\n",
+        "    print (num2)"
+      ]
     },
     {
       "cell_type": "code",
@@ -1013,13 +1082,60 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "source": [
+        "\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "9KXeZNUk0mnt"
+      },
+      "id": "9KXeZNUk0mnt",
+      "execution_count": 17,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 10,
       "id": "ca532d99-2994-46f4-a3a8-64506790c51a",
       "metadata": {
-        "id": "ca532d99-2994-46f4-a3a8-64506790c51a"
+        "id": "ca532d99-2994-46f4-a3a8-64506790c51a",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "1d109be0-2d1f-4891-c816-604c025e658b"
       },
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "10\n",
+            "9\n",
+            "8\n",
+            "7\n",
+            "6\n",
+            "5\n",
+            "4\n",
+            "3\n",
+            "2\n",
+            "1\n",
+            "Blast Off!\n"
+          ]
+        }
+      ],
+      "source": [
+        "print(10)\n",
+        "print(9)\n",
+        "print(8)\n",
+        "print(7)\n",
+        "print(6)\n",
+        "print(5)\n",
+        "print(4)\n",
+        "print(3)\n",
+        "print(2)\n",
+        "print(1)\n",
+        "print(\"Blast Off!\")"
+      ]
     }
   ],
   "metadata": {
