--- a/sundae_winner.ipynb
+++ b/sundae_winner.ipynb
@@ -135,13 +135,57 @@
       }
     },
     {
-      "cell_type": "code",
-      "source": [],
+      "cell_type": "markdown",
+      "source": [
+        "For two customers in winner line 3 add the number 2 next to customer that way it will two costumer instead of 1."
+      ],
       "metadata": {
-        "id": "gJF7dKtxtYMn"
+        "id": "fHQwiRJ83Ptj"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import random\n",
+        "\n",
+        "customers =  ['Jimmy', 'Kim', 'John', 'Stacy']\n",
+        "\n",
+        "winner = random.choice(customers)\n",
+        "\n",
+        "flavor = 'vanilla'\n",
+        "\n",
+        "print('Congratulations ' + winner +\n",
+        " ' you have won an ice cream sundae!')\n",
+        "\n",
+        "prompt = 'Would you like a cherry on top? '\n",
+        "\n",
+        "wants_cherry = input(prompt)\n",
+        "\n",
+        "order = flavor + ' sundae '\n",
+        "\n",
+        "if (wants_cherry == 'yes'):\n",
+        " order = order + ' with a cherry on top'\n",
+        "\n",
+        "print('One ' + order + ' for ' + winner +\n",
+        " ' coming right up...')"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "QXjg3tA_2RcO",
+        "outputId": "ad37a6a7-8908-4ebb-f64e-ff1748eaca64"
       },
       "execution_count": null,
-      "outputs": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Congratulations Kim you have won an ice cream sundae!\n"
+          ]
+        }
+      ]
     }
   ]
 }
