--- a/tax_calculation.ipynb
+++ b/tax_calculation.ipynb
@@ -41,7 +41,7 @@
       "metadata": {
         "id": "gSG5RKPWtioT"
       },
-      "execution_count": null,
+      "execution_count": 30,
       "outputs": []
     },
     {
@@ -69,7 +69,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 31,
       "metadata": {
         "id": "AuzMU2B7J-q4"
       },
@@ -97,7 +97,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 32,
       "metadata": {
         "id": "bIGrqfz_Mbt8"
       },
@@ -109,7 +109,12 @@
         "  elif 18201 < income <= 45000:\n",
         "    tax_payable = 0.19 * (income - 18200)\n",
         "  elif 45000 <= income < 120000:\n",
-        "    tax_payable = 5092 + 0.32 * (income - 45000)\n",
+        "    tax_payable = 5092 + 0.325 * (income - 45000)\n",
+        "  elif 1200001 <= income <= 180000:\n",
+        "    tax_payable= 29467 +0.37 * (income-120000)\n",
+        "  elif income >=180001:\n",
+        "    tax_payable = 51667 + 0.45 * (income-180000)\n",
+        "  return tax_payable\n",
         "\n",
         "  return tax_payable\n"
       ]
@@ -124,23 +129,97 @@
       ]
     },
     {
-      "cell_type": "code",
-      "execution_count": null,
+      "cell_type": "markdown",
+      "source": [
+        "Make sure the code is in the same section of the code. If its not click runtine and run all the code.\n"
+      ],
       "metadata": {
-        "id": "pd8m2I1uMuAu"
+        "id": "TtNX4UX-2-gD"
+      }
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 33,
+      "metadata": {
+        "id": "pd8m2I1uMuAu",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "94f81c14-e4c2-4fc8-ba91-e3999719e85e"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "What is your income for the year? 44444\n",
+            "Your income is  44444\n",
+            "tax is 4986.36\n"
+          ]
+        }
+      ],
       "source": [
         "# 'Main line'\n",
         "\n",
         "# Step 1 - Get the income\n",
-        "\n",
-        "\n",
+        "income= get_income()\n",
         "# Step 2 - Calculate the tax\n",
+        "tax= calculate_tax(income)\n",
         "\n",
-        "\n",
-        "# Step 3 - Output tax payable\n"
+        "# Step 3 - Output tax payable\n",
+        "print(\"tax is\", tax)\n",
+        "\n"
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "\n",
+        "def calculate_tax(income):\n",
+        "    if income <= 18200:\n",
+        "        tax_payable = 0\n",
+        "    elif 18201 <= income <= 45000:\n",
+        "        tax_payable = 0.19 * (income - 18200)\n",
+        "    elif 45001 <= income <= 120000:\n",
+        "        tax_payable = 5092 + 0.32 * (income - 45000)\n",
+        "    elif 120001 <= income <= 180000:\n",
+        "        tax_payable = 29467 + 0.37 * (income - 120000)\n",
+        "    elif income >= 180001:\n",
+        "        tax_payable = 51667 + 0.45 * (income - 180000)\n",
+        "    return tax_payable\n",
+        "\n",
+        "# Example usage:\n",
+        "income = int(input(\"please enter amount\"))\n",
+        "tax= calculate_tax(income)\n",
+        "print (tax)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "P_ufI6rq1cNA",
+        "outputId": "45a5168a-dda0-4adb-8a9e-2c430be2fca0"
+      },
+      "execution_count": 34,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "please enter amount44444\n",
+            "4986.36\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "-UWP5HR5y8L4"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
