--- a/business_buzzword_generator.ipynb
+++ b/business_buzzword_generator.ipynb
@@ -165,13 +165,37 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 29,
       "id": "71838d24-05d5-44cb-ae5a-1195fd805622",
       "metadata": {
-        "id": "71838d24-05d5-44cb-ae5a-1195fd805622"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "71838d24-05d5-44cb-ae5a-1195fd805622",
+        "outputId": "f72c185a-5926-44b9-9f67-018177914eeb"
       },
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "recipe is beef beef stir fry spinach\n"
+          ]
+        }
+      ],
+      "source": [
+        "import random\n",
+        "meat = ['chicken', 'beef', 'pork']\n",
+        "meat2= random.choice (meat)\n",
+        "dish = ['noodle', 'soup', 'stir fry']\n",
+        "vegetables = ['cabbage', 'tomato','spinach']\n",
+        "import random\n",
+        "meat = random.choice(meat)\n",
+        "dish = random.choice (dish)\n",
+        "vegetables = random.choice(vegetables)\n",
+        "recipe = meat + ' ' + meat2 + ' ' + dish + ' ' + vegetables\n",
+        "print (\"recipe is\", recipe)"
+      ]
     }
   ],
   "metadata": {
