--- a/online_judge_dmoj.ipynb
+++ b/online_judge_dmoj.ipynb
@@ -84,7 +84,38 @@
         "id": "nYyBS-GmoVdy"
       },
       "outputs": [],
-      "source": []
+      "source": [
+        "message = 'school is fun'\n",
+        "total_words = message.count(' ') + 1\n",
+        "print (total_words)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#the second one at the bottom is the correct version. Is the one that works\n",
+        "line = input()\n",
+        "total_words= line.count(' ') + 1\n",
+        "print(total_words)"
+      ],
+      "metadata": {
+        "id": "kIXl-yXIvD6M",
+        "outputId": "42cfd957-6a6e-44f8-ad0c-81308541582b",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "count words\n",
+            "2\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
