--- a/online_judge_dmoj.ipynb
+++ b/online_judge_dmoj.ipynb
@@ -91,19 +91,27 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [],
+      "metadata": {
+        "id": "TvcKhfWmvmA5"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "#the second one at the bottom is the correct version. Is the one that works\n",
+        "# this is for counting words\n",
         "line = input()\n",
         "total_words= line.count(' ') + 1\n",
         "print(total_words)"
       ],
       "metadata": {
-        "id": "kIXl-yXIvD6M",
-        "outputId": "42cfd957-6a6e-44f8-ad0c-81308541582b",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "kIXl-yXIvD6M",
+        "outputId": "42cfd957-6a6e-44f8-ad0c-81308541582b"
       },
       "execution_count": 1,
       "outputs": [
@@ -113,6 +121,34 @@
           "text": [
             "count words\n",
             "2\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# this if for counting characters\n",
+        "# use the \"len\" function to count the number of characters but it does however include the space\n",
+        "line = input()\n",
+        "total_words= len(line)\n",
+        "print(total_words)\n"
+      ],
+      "metadata": {
+        "id": "OpIRx9BfvsLc",
+        "outputId": "249a8579-ca6e-4e8f-b089-442ed8c452ce",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "reyven\n",
+            "6\n"
           ]
         }
       ]
