--- a/input_validation.ipynb
+++ b/input_validation.ipynb
@@ -76,10 +76,10 @@
       ],
       "metadata": {
         "id": "cQvBN7bFfB5k",
-        "outputId": "767fb028-f7fc-4bbd-c592-67b1de6709ab",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "767fb028-f7fc-4bbd-c592-67b1de6709ab"
       },
       "id": "cQvBN7bFfB5k",
       "execution_count": 1,
@@ -158,46 +158,45 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 3,
       "id": "dfe1740b",
       "metadata": {
         "id": "dfe1740b",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "f16158e5-806b-4104-9cfd-019693f4b9b2"
+        "outputId": "bbd8a928-6505-4879-e069-77e8f2ae60e9"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Looking in indexes: https://pypi.org/simple, https://us-python.pkg.dev/colab-wheels/public/simple/\n",
             "Collecting PyInputPlus\n",
             "  Downloading PyInputPlus-0.2.12.tar.gz (20 kB)\n",
             "  Installing build dependencies ... \u001b[?25l\u001b[?25hdone\n",
             "  Getting requirements to build wheel ... \u001b[?25l\u001b[?25hdone\n",
             "  Preparing metadata (pyproject.toml) ... \u001b[?25l\u001b[?25hdone\n",
-            "Collecting stdiomask>=0.0.3\n",
-            "  Downloading stdiomask-0.0.6.tar.gz (3.6 kB)\n",
+            "Collecting pysimplevalidate>=0.2.7 (from PyInputPlus)\n",
+            "  Downloading PySimpleValidate-0.2.12.tar.gz (22 kB)\n",
             "  Installing build dependencies ... \u001b[?25l\u001b[?25hdone\n",
             "  Getting requirements to build wheel ... \u001b[?25l\u001b[?25hdone\n",
             "  Preparing metadata (pyproject.toml) ... \u001b[?25l\u001b[?25hdone\n",
-            "Collecting pysimplevalidate>=0.2.7\n",
-            "  Downloading PySimpleValidate-0.2.12.tar.gz (22 kB)\n",
+            "Collecting stdiomask>=0.0.3 (from PyInputPlus)\n",
+            "  Downloading stdiomask-0.0.6.tar.gz (3.6 kB)\n",
             "  Installing build dependencies ... \u001b[?25l\u001b[?25hdone\n",
             "  Getting requirements to build wheel ... \u001b[?25l\u001b[?25hdone\n",
             "  Preparing metadata (pyproject.toml) ... \u001b[?25l\u001b[?25hdone\n",
             "Building wheels for collected packages: PyInputPlus, pysimplevalidate, stdiomask\n",
             "  Building wheel for PyInputPlus (pyproject.toml) ... \u001b[?25l\u001b[?25hdone\n",
-            "  Created wheel for PyInputPlus: filename=PyInputPlus-0.2.12-py3-none-any.whl size=11314 sha256=75a71c8e51202c28d4105bd9f62a202d66e15a8b46f5af0bca972f95a4e03325\n",
-            "  Stored in directory: /root/.cache/pip/wheels/b4/6e/2f/8a852732646cabec36c3fe8fc060ec5bea1c1be711432c47f7\n",
+            "  Created wheel for PyInputPlus: filename=PyInputPlus-0.2.12-py3-none-any.whl size=11296 sha256=e0ec70145b5750e1760f17b2a7cad8a16887be645e5c91c28686fcbf95954f79\n",
+            "  Stored in directory: /root/.cache/pip/wheels/13/ec/a5/f780c8008b74e885aada43369ebf4d350edfd12bb5909ccb23\n",
             "  Building wheel for pysimplevalidate (pyproject.toml) ... \u001b[?25l\u001b[?25hdone\n",
-            "  Created wheel for pysimplevalidate: filename=PySimpleValidate-0.2.12-py3-none-any.whl size=16187 sha256=2673669a0397691a1e3d6ef8773813085ce6906323a2bde68859d43beb2f3931\n",
-            "  Stored in directory: /root/.cache/pip/wheels/b1/44/4a/043a4f4c4512c7cdfb0c2b8408b18b0de5fd45cac57f5dfa02\n",
+            "  Created wheel for pysimplevalidate: filename=PySimpleValidate-0.2.12-py3-none-any.whl size=16176 sha256=059333cf32982b501cebd438f5e9bbca64bd041bef0700f624cd1c5990526ab4\n",
+            "  Stored in directory: /root/.cache/pip/wheels/64/29/c9/2ee861e5b0775e289013b7c7157e0bdcea3a1b844f835b2eb8\n",
             "  Building wheel for stdiomask (pyproject.toml) ... \u001b[?25l\u001b[?25hdone\n",
-            "  Created wheel for stdiomask: filename=stdiomask-0.0.6-py3-none-any.whl size=3318 sha256=53f9a072619287c148655db60f5a69900d4ea352a554022a988bb8a48f5ed4e3\n",
-            "  Stored in directory: /root/.cache/pip/wheels/1d/aa/47/f41f117d22c5de82e95d9342f44da578c80610739a2d5ebec4\n",
+            "  Created wheel for stdiomask: filename=stdiomask-0.0.6-py3-none-any.whl size=3306 sha256=738c3c9fa5091152ba8927d79b4ce055d8da69ca99592fcaa7ac1450a9033ed3\n",
+            "  Stored in directory: /root/.cache/pip/wheels/6c/00/4b/0715696f101d7376f67a83cf3d545feb8c241eeee75b80bb6f\n",
             "Successfully built PyInputPlus pysimplevalidate stdiomask\n",
             "Installing collected packages: stdiomask, pysimplevalidate, PyInputPlus\n",
             "Successfully installed PyInputPlus-0.2.12 pysimplevalidate-0.2.12 stdiomask-0.0.6\n"
@@ -222,10 +221,10 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "4240f0c0-8ba9-460e-f900-7a43bb099d07"
+        "outputId": "273c934d-304d-4529-9eab-f798a0c8eaea"
       },
       "id": "OvqPitIkh379",
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
@@ -233,8 +232,8 @@
           "text": [
             "How old are you?ten\n",
             "'ten' is not a number.\n",
-            "How old are you?ten\n",
-            "'ten' is not a number.\n",
+            "How old are you?twenty\n",
+            "'twenty' is not a number.\n",
             "How old are you?10\n",
             "You are 10 years old\n"
           ]
