--- a/speech_to_text.ipynb
+++ b/speech_to_text.ipynb
@@ -62,8 +62,9 @@
     {
       "cell_type": "code",
       "source": [
-        "import speech_recognition as sr\n",
-        "sr._version_"
+        "# Perplexity Au suggested to install this module\n",
+        "!pip install SpeechRecognition\n",
+        "!wget https://www.pacdv.com/sounds/voices/maybe-next-time.wav\n"
       ],
       "metadata": {
         "id": "jpmIwK03SKOr"
@@ -75,14 +76,63 @@
       "cell_type": "code",
       "source": [
         "import speech_recognition as sr\n",
-        "r= sr.Recognizer()\n",
+        "\n",
+        "r = sr.Recognizer()\n",
         "\n",
         "text = None\n",
+        "filename = '/content/maybe-next-time.wav'\n",
         "\n",
-        "with sr."
+        "with sr.AudioFile(filename) as source:\n",
+        "    audio_data = r.record(source)\n",
+        "    text = r.recognize_google(audio_data)\n",
+        "\n",
+        "output_file = 'text_from_speech.txt'\n",
+        "\n",
+        "with open(output_file, 'w') as f:\n",
+        "  f.write(text)"
       ],
       "metadata": {
         "id": "FRUM7ntYta9G"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# the comment were added by AI, see [1] for conversation\n",
+        "\n",
+        "\n",
+        "import speech_recognition as sr\n",
+        "\n",
+        "# Importing the necessary module for speech recognition\n",
+        "\n",
+        "# Creating a Recognizer instance from the speech_recognition library\n",
+        "r = sr.Recognizer()\n",
+        "\n",
+        "# Initializing a variable to hold the recognized text\n",
+        "text = None\n",
+        "\n",
+        "# Specifying the filename of the audio file to be transcribed\n",
+        "filename = '/content/maybe-next-time.wav'\n",
+        "\n",
+        "# Opening the audio file and recognizing the speech\n",
+        "with sr.AudioFile(filename) as source:\n",
+        "    # Reading the audio data from the source file\n",
+        "    audio_data = r.record(source)\n",
+        "\n",
+        "    # Using Google's speech recognition service to transcribe the audio data to text\n",
+        "    text = r.recognize_google(audio_data)\n",
+        "\n",
+        "# Defining the name of the output file where the recognized text will be written\n",
+        "output_file = 'text_from_speech.txt'\n",
+        "\n",
+        "# Writing the recognized text to the output file\n",
+        "with open(output_file, 'w') as f:\n",
+        "    f.write(text)\n"
+      ],
+      "metadata": {
+        "id": "pbmcGLxfYIYI"
       },
       "execution_count": null,
       "outputs": []
