--- a/testing_with_docutest_.ipynb
+++ b/testing_with_docutest_.ipynb
@@ -100,23 +100,146 @@
         "\n",
         "def add(x, y):\n",
         "    '''Add two numbers\n",
+        "    >>> add (0,0)\n",
         "    '''\n",
         "    return x + y"
       ],
       "metadata": {
         "id": "iOFin6zwj94Y"
       },
-      "execution_count": null,
+      "execution_count": 22,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "import doctest\n",
+        "def isNumber(x):\n",
+        "  return (type(x) == int or type(x) == float)\n",
+        "\n",
+        "def add (x,y):\n",
+        "  ''' Add two numbers\n",
+        "  >>> add(0,0)\n",
+        "  0\n",
+        "  >>> add(1,1)\n",
+        "  2\n",
+        "  >>> add(-1,-1)\n",
+        "  -2\n",
+        "  >>> add(1.1,1.1)\n",
+        "  2.2\n",
+        "  >>> add('0','0')\n",
+        "  'not a number'\n",
+        "  '''\n",
+        "  if isNumber(x) and isNumber(y):\n",
+        "    return x+y\n",
+        "  return 'not a number'\n",
+        "doctest.testmod()"
+      ],
       "metadata": {
-        "id": "ip-5bULUGjuz"
+        "id": "ip-5bULUGjuz",
+        "outputId": "ceea08e8-16b4-4404-cf2a-765936cebf4e",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 23,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "**********************************************************************\n",
+            "File \"__main__\", line 13, in __main__.add\n",
+            "Failed example:\n",
+            "    add(1.1,1.1)\n",
+            "Expected:\n",
+            "    2.2 \n",
+            "Got:\n",
+            "    2.2\n",
+            "**********************************************************************\n",
+            "1 items had failures:\n",
+            "   1 of   5 in __main__.add\n",
+            "***Test Failed*** 1 failures.\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "TestResults(failed=1, attempted=5)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 23
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import doctest\n",
+        "\n",
+        "def isNumber(x):\n",
+        "    return (type(x) == int or type(x) == float)\n",
+        "\n",
+        "def add(x, y):\n",
+        "    ''' Add two numbers\n",
+        "    >>> add(0, 0)\n",
+        "    0\n",
+        "    >>> add(1, 1)\n",
+        "    2\n",
+        "    >>> add(-1,-1)\n",
+        "    -2\n",
+        "    >>> add(1.3, 1.3)\n",
+        "    2.6\n",
+        "    >>> add('0', 0)\n",
+        "    'not a number'\n",
+        "    '''\n",
+        "\n",
+        "    if isNumber(x) and isNumber(y):\n",
+        "        return x + y\n",
+        "    return 'not a number'\n",
+        "\n",
+        "doctest.testmod()\n"
+      ],
+      "metadata": {
+        "id": "g8DiMeJGGSCe",
+        "outputId": "63698fff-c987-41fb-b2c8-4d174b8ec137",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 26,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "**********************************************************************\n",
+            "File \"__main__\", line 14, in __main__.add\n",
+            "Failed example:\n",
+            "    add(1.3, 1.3)\n",
+            "Expected:\n",
+            "    2.6 \n",
+            "Got:\n",
+            "    2.6\n",
+            "**********************************************************************\n",
+            "1 items had failures:\n",
+            "   1 of   5 in __main__.add\n",
+            "***Test Failed*** 1 failures.\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "TestResults(failed=1, attempted=5)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 26
+        }
+      ]
     },
     {
       "cell_type": "markdown",
