--- a/debugging_isPrime().ipynb
+++ b/debugging_isPrime().ipynb
@@ -58,6 +58,56 @@
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def isPrime(candidate): #help from ChatGpt\n",
+        "    if candidate <= 1:\n",
+        "        return False\n",
+        "\n",
+        "    lower = candidate - 1\n",
+        "    print(\"Checking divisibility for candidate:\", candidate)\n",
+        "    while lower > 1:\n",
+        "        print(\"Checking lower:\", lower)\n",
+        "        if candidate / lower == candidate // lower:\n",
+        "            print(\"Not a prime, as\", candidate, \"is divisible by\", lower)\n",
+        "            return False\n",
+        "        lower -= 1\n",
+        "\n",
+        "    return True\n",
+        "\n",
+        "print(isPrime(20))\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "pCn4gIpN5-Bj",
+        "outputId": "5c93ddce-e3a8-4e7d-d36c-7ef433b0c0ef"
+      },
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Checking divisibility for candidate: 20\n",
+            "Checking lower: 19\n",
+            "Checking lower: 18\n",
+            "Checking lower: 17\n",
+            "Checking lower: 16\n",
+            "Checking lower: 15\n",
+            "Checking lower: 14\n",
+            "Checking lower: 13\n",
+            "Checking lower: 12\n",
+            "Checking lower: 11\n",
+            "Checking lower: 10\n",
+            "Not a prime, as 20 is divisible by 10\n",
+            "False\n"
+          ]
+        }
+      ]
     }
   ]
 }
