--- a/using_my_math.ipynb
+++ b/using_my_math.ipynb
@@ -64,7 +64,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -115,7 +115,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -144,7 +144,7 @@
       "metadata": {
         "id": "Zzqf8a728rDq"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -159,7 +159,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -183,7 +183,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -217,16 +217,67 @@
     {
       "cell_type": "code",
       "source": [
-        "!pip install margo-loader"
+        "pip install git+https://github.com/margo-notebooks/margo-loader-py"
       ],
       "metadata": {
-        "id": "QOOQhfvIiOss",
-        "outputId": "fc185f71-9653-45f0-bab7-73fad0c9aa0d",
+        "id": "NAz045iRJDVj",
+        "outputId": "aa94c659-e799-4b7b-8ada-51331c54f265",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 9,
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Collecting git+https://github.com/margo-notebooks/margo-loader-py\n",
+            "  Cloning https://github.com/margo-notebooks/margo-loader-py to /tmp/pip-req-build-56o_oh2n\n",
+            "  Running command git clone --filter=blob:none --quiet https://github.com/margo-notebooks/margo-loader-py /tmp/pip-req-build-56o_oh2n\n",
+            "  Resolved https://github.com/margo-notebooks/margo-loader-py to commit d9bb4725a86af3721300389f56ff134fe3a40c2a\n",
+            "  Installing build dependencies ... \u001b[?25l\u001b[?25hdone\n",
+            "  Getting requirements to build wheel ... \u001b[?25l\u001b[?25hdone\n",
+            "  Preparing metadata (pyproject.toml) ... \u001b[?25l\u001b[?25hdone\n",
+            "Collecting margo-parser<2,>=1 (from margo-loader==1.0.4)\n",
+            "  Using cached margo_parser-1.0.3-py3-none-any.whl (11 kB)\n",
+            "Requirement already satisfied: nbformat<6,>5 in /usr/local/lib/python3.10/dist-packages (from margo-loader==1.0.4) (5.10.4)\n",
+            "Collecting lark[regex]==1.1.5 (from margo-parser<2,>=1->margo-loader==1.0.4)\n",
+            "  Using cached lark-1.1.5-py3-none-any.whl (107 kB)\n",
+            "Collecting pyyaml==5.3.1 (from margo-parser<2,>=1->margo-loader==1.0.4)\n",
+            "  Using cached PyYAML-5.3.1.tar.gz (269 kB)\n",
+            "  \u001b[1;31merror\u001b[0m: \u001b[1msubprocess-exited-with-error\u001b[0m\n",
+            "  \n",
+            "  \u001b[31m×\u001b[0m \u001b[32mpython setup.py egg_info\u001b[0m did not run successfully.\n",
+            "  \u001b[31m│\u001b[0m exit code: \u001b[1;36m1\u001b[0m\n",
+            "  \u001b[31m╰─>\u001b[0m See above for output.\n",
+            "  \n",
+            "  \u001b[1;35mnote\u001b[0m: This error originates from a subprocess, and is likely not a problem with pip.\n",
+            "  Preparing metadata (setup.py) ... \u001b[?25l\u001b[?25herror\n",
+            "\u001b[1;31merror\u001b[0m: \u001b[1mmetadata-generation-failed\u001b[0m\n",
+            "\n",
+            "\u001b[31m×\u001b[0m Encountered error while generating package metadata.\n",
+            "\u001b[31m╰─>\u001b[0m See above for output.\n",
+            "\n",
+            "\u001b[1;35mnote\u001b[0m: This is an issue with the package mentioned above, not pip.\n",
+            "\u001b[1;36mhint\u001b[0m: See above for details.\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!pip install margo-loader"
+      ],
+      "metadata": {
+        "id": "QOOQhfvIiOss",
+        "outputId": "1e6537c9-ce83-469e-a206-9083f5be669f",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
@@ -236,13 +287,13 @@
             "  Downloading margo_loader-1.0.4-py3-none-any.whl (13 kB)\n",
             "Collecting margo-parser<2,>=1 (from margo-loader)\n",
             "  Downloading margo_parser-1.0.3-py3-none-any.whl (11 kB)\n",
-            "Requirement already satisfied: nbformat<6,>5 in /usr/local/lib/python3.10/dist-packages (from margo-loader) (5.10.3)\n",
+            "Requirement already satisfied: nbformat<6,>5 in /usr/local/lib/python3.10/dist-packages (from margo-loader) (5.10.4)\n",
             "Collecting lark[regex]==1.1.5 (from margo-parser<2,>=1->margo-loader)\n",
             "  Downloading lark-1.1.5-py3-none-any.whl (107 kB)\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m108.0/108.0 kB\u001b[0m \u001b[31m5.5 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m108.0/108.0 kB\u001b[0m \u001b[31m2.2 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
             "\u001b[?25hCollecting pyyaml==5.3.1 (from margo-parser<2,>=1->margo-loader)\n",
             "  Downloading PyYAML-5.3.1.tar.gz (269 kB)\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m269.4/269.4 kB\u001b[0m \u001b[31m15.2 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m269.4/269.4 kB\u001b[0m \u001b[31m6.7 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
             "\u001b[?25h  \u001b[1;31merror\u001b[0m: \u001b[1msubprocess-exited-with-error\u001b[0m\n",
             "  \n",
             "  \u001b[31m×\u001b[0m \u001b[32mpython setup.py egg_info\u001b[0m did not run successfully.\n",
@@ -274,7 +325,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
